objects/HealthCloudGA__ProgramPatientAffiliation__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account (Patient/ Individual).</description>
        <inlineHelpText>Lookup to Account (Patient/ Individual).</inlineHelpText>
        <label>Patient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Patient Affiliation</relationshipLabel>
        <relationshipName>ProgramPatientAffiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EndDate__c</fullName>
        <description>Date the patient’s enrollment ends for the program.</description>
        <inlineHelpText>Date the patient’s enrollment ends for the program.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether a record is active or not.</description>
        <inlineHelpText>Indicates whether a record is active or not.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Program__c</fullName>
        <description>Identifies which program the patient is enrolled in.</description>
        <inlineHelpText>Identifies which program the patient is enrolled in.</inlineHelpText>
        <label>Program</label>
        <referenceTo>HealthCloudGA__Program__c</referenceTo>
        <relationshipLabel>Program Patient Affiliation</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>HealthCloudGA__Provider__c</referenceTo>
        <relationshipLabel>Program Patient Affiliation</relationshipLabel>
        <relationshipName>ProgramPatientAffiliation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Recalculate__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that is set when patient information that influences the program is changed,allows recalculating program data.</description>
        <label>Recalculate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StartDate__c</fullName>
        <description>Date the patient’s enrollment begins for the program.</description>
        <inlineHelpText>Date the patient’s enrollment begins for the program.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Status__c</fullName>
        <description>Medicare CCM program status.</description>
        <inlineHelpText>Medicare CCM program status.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>In Program</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Patient Affiliation</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Patient Affiliation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>